# video_objectcapture

./: README.md
erzhencha/: .main.cpp.swp  12.avi  13.avi  input1.avi  main.cpp
gauss/: .main.cpp.swp  11.avi  12.avi  13.avi  CMakeLists.txt  Fountain.avi  input.avi  input2.avi  input3.avi  input5.avi  input8.avi  main.cpp
rgb_gray/: 2cars.avi  README.md  car2.avi  rgb_gray.m
sanzhencha/: main.cpp
shake_reduce/: README.md  gezhenfa.m  youhuazhenjian.m  zhenjianjunzhi.m
shake_reduce/2carsshake/: dssqd.avi  youhua.avi  zhenjianjunzhi.avi
